@@ -143,3 +143,66 @@ RcppExport SEXP AmericanOption(SEXP optionParameters) {
     return R_NilValue;
 }
 
+RcppExport SEXP EuropeanOptionArrays(SEXP typesexp, SEXP parsexp) {
+
+    try {
+        Option::Type optionType = getOptionType( Rcpp::as<std::string>(typesexp) );
+        Rcpp::NumericMatrix par(parsexp); // matrix of parameters as per expand.grid() in R
+        int n = par.nrow();
+        Rcpp::NumericVector value(n), delta(n), gamma(n), vega(n), theta(n), rho(n), divrho(n);
+
+        Date today = Date::todaysDate();
+        Settings::instance().evaluationDate() = today;
+
+        DayCounter dc = Actual360();
+
+        for (int i=0; i<n; i++) {
+
+            // pars <- expand.grid(underlying, strike, dividendYield, riskFreeRate, maturity, volatility)
+
+            double underlying    = par(i, 0);    // first column
+            double strike        = par(i, 1);    // second column
+            Spread dividendYield = par(i, 2);    // third column
+            Rate riskFreeRate    = par(i, 3);    // fourth column
+            Time maturity        = par(i, 4);    // fifth column
+            int length           = int(maturity*360 + 0.5); // FIXME: this could be better
+            double volatility    = par(i, 5);    // sixth column
+    
+            boost::shared_ptr<SimpleQuote> spot(new SimpleQuote( underlying ));
+            boost::shared_ptr<SimpleQuote> vol(new SimpleQuote( volatility ));
+            boost::shared_ptr<BlackVolTermStructure> volTS = flatVol(today, vol, dc);
+            boost::shared_ptr<SimpleQuote> qRate(new SimpleQuote( dividendYield ));
+            boost::shared_ptr<YieldTermStructure> qTS = flatRate(today, qRate, dc);
+            boost::shared_ptr<SimpleQuote> rRate(new SimpleQuote( riskFreeRate ));
+            boost::shared_ptr<YieldTermStructure> rTS = flatRate(today, rRate, dc);
+
+            Date exDate = today + length;
+            boost::shared_ptr<Exercise> exercise(new EuropeanExercise(exDate));
+	
+            boost::shared_ptr<StrikedTypePayoff> payoff(new PlainVanillaPayoff(optionType, strike));
+            boost::shared_ptr<VanillaOption> option = makeOption(payoff, exercise, spot, qTS, rTS, volTS);
+
+            value[i]  = option->NPV();
+            delta[i]  = option->delta();
+            gamma[i]  = option->gamma();
+            vega[i]   = option->vega();
+            theta[i]  = option->theta();
+            rho[i]    = option->rho();
+            divrho[i] = option->dividendRho();
+        }
+        return Rcpp::List::create(Rcpp::Named("value")  = value,
+                                  Rcpp::Named("delta")  = delta,
+                                  Rcpp::Named("gamma")  = gamma,
+                                  Rcpp::Named("vega")   = vega,
+                                  Rcpp::Named("theta")  = theta,
+                                  Rcpp::Named("rho")    = rho,
+                                  Rcpp::Named("divRho") = divrho);
+
+    } catch(std::exception &ex) { 
+        forward_exception_to_r(ex); 
+    } catch(...) { 
+        ::Rf_error("c++ exception (unknown reason)"); 
+    }
+
+    return R_NilValue;
+}
